--- a/Rengar.theme.css
+++ b/Rengar.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Rengar_Theme","description":"A daunting theme based off of a champion from League of Legends (Customizable Colors & Background). Based on Discord Reborn by @Omniscient, Edited and fixed by @Zerthox to create Discord Reborn - Ruby, edited by @Nyxxay","author":"Nyxxay","version":"1.0"}*//
+//META{"name":"Rengar_Theme","description":"A daunting theme based off of a champion from League of Legends (Customizable Colors & Background). Based on Discord Reborn by @Omniscient, Edited and fixed by @Zerthox to create Discord Reborn - Sapphire, edited by @Nyxxay","author":"Nyxxay","version":"1.0"}*//
 /* "Discord Esports - Fnatic" v1.0" by Nyxxay */
 /* Fixes & Adjustments by @Nyxxay */
 /* Based on "Discord Reborn v4.30" by @Omniscient and "Discord Reborn v1.21 - Sapphire" by @Zerthox*/
